--- a/public/index.html
+++ b/public/index.html
@@ -4,148 +4,246 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Popup App Generator</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-      }
-      .container {
-        display: flex;
-        gap: 20px;
-      }
-      .column {
-        flex: 1;
-        border: 1px solid #ddd;
-        padding: 20px;
-      }
-      .preview {
-        border: 1px solid #000;
-        padding: 20px;
-        background-color: white;
-        color: black;
-      }
       .dark-mode {
-        background-color: #333;
-        color: white;
+        background-color: #333 !important;
+        color: white !important;
+      }
+      .form-label {
+        color: inherit; /* Inherit color for light/dark modes */
+      }
+      #preview {
+        border: 2px solid rgb(81, 238, 83);
+        padding: 20px;
+        border-radius: 8px;
+      }
+      .left-column {
+        border: 2px solid #596fda; /* Add border to left-hand column */
+        padding: 15px;
+        border-radius: 8px;
+      }
+      .text-center {
+        color: #78ec64; /* Change text color to blue */
+      }
+      #generator-form {
+        border: 2px solid #b94fd6;
+        padding: 20px;
+        border-radius: 8px;
       }
     </style>
   </head>
-  <body>
-    <h1>Agent Generator</h1>
-    <h3>
-      <ul>
-        <li>
-          1. Create or Get Assistant in OpenAI. If Assistant already has
-          VectorDB ignore next step
+  <body class="bg-light text-dark">
+    <div class="container mt-4">
+      <h1 class="text-center">Agent Generator</h1>
+      <ul class="list-group list-group-numbered">
+        <li class="list-group-item">
+          Create or Get Assistant in OpenAI. If Assistant already has VectorDB,
+          ignore the next step.
         </li>
-        <li>2. Upload Files to VectorDB and Attach to Assistant if Needed</li>
-        <li>3. Generate App Code for WebPage</li>
+        <li class="list-group-item">
+          Upload Files to VectorDB. They will be attached to Assistant.
+        </li>
+        <li class="list-group-item">Generate App Code for WebPage.</li>
       </ul>
-    </h3>
-    <div class="container">
-      <div class="column">
-        <form id="generator-form">
-          <label for ="title">Title of App:</label> 
-            <input type="text" name="title" id="title" required /><br /><br />
-          <label for="assistant_name">Assistant Name:</label>
-            <input
-              type="text"
-              name="assistant_name"
-              id="assistant_name"
-              required /> <br /><br />
-          <label for="assistantMessage">Assistant System Message:</label>
-            <input
-              type="text"
-              name="assistantMessage"
-              id="assistantMessage"
-              required /><br /><br />
-              <label for="modelSelect">Choose a model:</label>
-              <select id="modelSelect" name="model">
-                  <option value="gpt-4o-2024-08-06">gpt-4o-2024-08-06</option>
-                  <option value="gpt-4o-2024-05-13">gpt-4o-2024-05-13</option>
-                  <option value="gpt-4-turbo-preview">gpt-4-turbo-preview</option>
-                  <option value="gpt-4-turbo-2024-04-09">gpt-4-turbo-2024-04-09</option>
-                  <option value="gpt-4-turbo">gpt-4-turbo</option>
-                  <option value="gpt-4-1106-preview" selected>gpt-4-1106-preview</option>
-                  <option value="gpt-4-0613">gpt-4-0613</option>
-                  <option value="gpt-4-0125-preview">gpt-4-0125-preview</option>
-                  <option value="gpt-4">gpt-4</option>
-                  <option value="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</option>
-                  <option value="gpt-3.5-turbo-1106">gpt-3.5-turbo-1106</option>
+
+      <div class="d-flex flex-column-reverse flex-lg-row gap-4 mt-4">
+        <div class="col-lg-6">
+          <form id="generator-form" class="needs-validation" novalidate>
+            <div class="mb-3">
+              <label for="title" class="form-label">Title of App:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="title"
+                name="title"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="assistant_name" class="form-label"
+                >Assistant Name:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="assistant_name"
+                name="assistant_name"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="assistantMessage" class="form-label"
+                >Assistant System Message:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="assistantMessage"
+                name="assistantMessage"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="modelSelect" class="form-label"
+                >Choose a model:</label
+              >
+              <select id="modelSelect" class="form-select" name="model">
+                <option value="gpt-4o-2024-08-06">gpt-4o-2024-08-06</option>
+                <option value="gpt-4o-2024-05-13">gpt-4o-2024-05-13</option>
+                <option value="gpt-4-turbo-preview">gpt-4-turbo-preview</option>
+                <option value="gpt-4-turbo-2024-04-09">
+                  gpt-4-turbo-2024-04-09
+                </option>
+                <option value="gpt-4-turbo">gpt-4-turbo</option>
+                <option value="gpt-4-1106-preview" selected>
+                  gpt-4-1106-preview
+                </option>
+                <option value="gpt-4-0613">gpt-4-0613</option>
+                <option value="gpt-4-0125-preview">gpt-4-0125-preview</option>
+                <option value="gpt-4">gpt-4</option>
+                <option value="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</option>
+                <option value="gpt-3.5-turbo-1106">gpt-3.5-turbo-1106</option>
               </select>
-          <button id="createAssistant" type="button">Create or get Assistant</button
-          ><br /><br />
-          <label
-            >Directory Path for Files Upload:
-            <input type="text" name="dir_path" id="dir_path"  /></label
-          ><br /><br />
-          <label
-            >Embed Type:
-            <select name="embed_type" id="embed_type">
-              <option value="openai">OpenAI</option>
-              <option value="local">Local</option>
-            </select>
-            <button id="uploadFiles" type="button">Upload Files to VectorDB</button> </label
-          ><br /><br />
-
-          <label for="agent_instructions">Agent System Instructions:</label>
-            <input
-              type="text"
-              name="agent_instructions"
-              id="agent_instructions"
-              required
-            ></input><br /><br />
-
-          <label for ="initialMessage">Initial Message: </label>
-            <input
-              type="text"
-              name="initialMessage"
-              id="initialMessage"
-            ></input><br /><br />
-            
-          <label for="promptPlaceholder">Prompt Placeholder:</label> 
-            <input
-              type="text"
-              name="promptPlaceholder"
-              id="promptPlaceholder"
-              required /><br /><br />
-
-          <label for="mode">Mode: </label>
-            <select name="mode" id="mode">
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select> <br /><br />
-
-          <button id="generate_agent" type="button">Generate Agent Code</button>
-        </form>
-      </div>
-      <div class="column preview" id="preview">
-        <h2 id="preview-title"> Agent</h2>
-        <div>
-          <strong>System Message:</strong>
-          <input id="preview-system" type="text"></input>
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                id="createAssistant"
+                type="button"
+                class="btn btn-primary"
+              >
+                Create or Get Assistant
+              </button>
+            </div>
+            <div class="my-3">
+              <label for="dir_path" class="form-label"
+                >Directory Path for Files Upload:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="dir_path"
+                name="dir_path"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="embed_type" class="form-label">Embed Type:</label>
+              <select id="embed_type" class="form-select" name="embed_type">
+                <option value="openai">OpenAI</option>
+                <option value="local">Local</option>
+              </select>
+              <button
+                id="uploadFiles"
+                type="button"
+                class="btn btn-secondary mt-2"
+              >
+                Upload Files to VectorDB
+              </button>
+            </div>
+            <div class="mb-3">
+              <label for="agent_instructions" class="form-label"
+                >Agent System Instructions:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="agent_instructions"
+                name="agent_instructions"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="initialMessage" class="form-label"
+                >Initial Message:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="initialMessage"
+                name="initialMessage"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="promptPlaceholder" class="form-label"
+                >Prompt Placeholder:</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="promptPlaceholder"
+                name="promptPlaceholder"
+                required
+              />
+            </div>
+            <div class="d-grid gap-2">
+              <button id="generate_agent" type="button" class="btn btn-success">
+                Generate Agent Code
+              </button>
+            </div>
+          </form>
         </div>
-        <div>
-          <strong>Initial Messages:</strong>
-          <input id="preview-initial-list" type="text"></input>
-        </div>
-        <div><strong>Prompt:</strong></div>
-        <input
-          type="text"
-          placeholder="[Prompt Placeholder]"
-          id="preview-prompt"
-        />
-        <button id="runThread" type="button">&#8594;</button>
-        <button id="newThread" type="button">New Thread</button>
 
-        <div>
-          <strong>Response:</strong>
-          <div id="preview-response" style="height: 200px; overflow-y: auto">
-            [Response]
+        <!-- Right Column -->
+        <div class="col-lg-6">
+          <div id="preview" class="preview">
+            <h2><strong id="preview-title">Agent</strong></h2>
+            <div class="mb-2">
+              <strong>System Message:</strong>
+              <input id="preview-system" class="form-control" type="text" />
+            </div>
+            <div class="mb-2">
+              <strong>Initial Messages:</strong>
+              <input
+                id="preview-initial-list"
+                class="form-control"
+                type="text"
+              />
+            </div>
+            <div class="mb-2">
+              <strong>Prompt:</strong>
+              <input
+                id="preview-prompt"
+                class="form-control"
+                type="text"
+                placeholder="[Prompt Placeholder]"
+              />
+              <button id="runThread" type="button" class="btn btn-primary mt-2">
+                &#8594;
+              </button>
+              <button
+                id="newThread"
+                type="button"
+                class="btn btn-outline-secondary mt-2"
+              >
+                New Thread
+              </button>
+            </div>
+            <div class="mt-3">
+              <strong>Response:</strong>
+              <div
+                id="preview-response"
+                class="p-3 border rounded"
+                style="height: 200px; overflow-y: auto"
+              >
+                [Response]
+              </div>
+            </div>
           </div>
         </div>
       </div>
+
+      <div class="form-check form-switch mt-4">
+        <input class="form-check-input" type="checkbox" id="toggleDarkMode" />
+        <label class="form-check-label" for="toggleDarkMode"
+          >Enable Dark Mode</label
+        >
+      </div>
     </div>
+
     <script>
       let focus = {
         assistant_id: "",
@@ -157,9 +255,25 @@
         run_id: "",
         run_status: "",
         vector_store_id: "",
-        embed_type: "openai"
-    };
+        embed_type: "openai",
+      };
       document.addEventListener("DOMContentLoaded", () => {
+        function toggleDarkMode() {
+          const isDarkMode = document.getElementById("toggleDarkMode").checked;
+          document.body.classList.toggle("bg-dark", isDarkMode);
+          document.body.classList.toggle("text-light", isDarkMode);
+          document.querySelectorAll(".form-label").forEach((label) => {
+            label.style.color = isDarkMode ? "white" : "black";
+          });
+          // Update all <strong> elements in the #preview div
+          document.querySelectorAll("#preview strong").forEach((strong) => {
+            strong.style.color = isDarkMode ? "white" : "black";
+          });
+        }
+        document
+          .getElementById("toggleDarkMode")
+          .addEventListener("change", toggleDarkMode);
+
         function updatePreview() {
           console.log("updatePreview called");
 
@@ -174,15 +288,12 @@
 
           // Update initial messages list
           document.getElementById("preview-initial-list").value =
-            document.getElementById("initialMessage").value ||
-            "[Test Message]";
-
+            document.getElementById("initialMessage").value || "[Test Message]";
 
           // Update prompt placeholder
           document.getElementById("preview-prompt").value =
             document.getElementById("promptPlaceholder").value ||
             "[Prompt Placeholder]";
-
 
           // Update mode
           const mode = document.getElementById("mode").value;
@@ -250,13 +361,13 @@
       document
         .getElementById("generate_agent")
         .addEventListener("click", async () => {
-          let title =          document.getElementById("preview-title").innerText;
-          let systemMessage =  document.getElementById("preview-system").value;
-          let initialMessage = document.getElementById("preview-initial-list").value;
+          let title = document.getElementById("preview-title").innerText;
+          let systemMessage = document.getElementById("preview-system").value;
+          let initialMessage = document.getElementById(
+            "preview-initial-list"
+          ).value;
           let prompt = document.getElementById("preview-prompt").value;
           let mode = document.getElementById("mode").value;
-
-          ;
 
           // get the state of the focus
           console.log("fetching focus");
@@ -286,7 +397,7 @@
           if (response.ok) {
             const agentCode = await response.text(); // Parse the response as plain text
             console.log("Agent code generated:", agentCode);
-           
+
             // Optional: Dynamically download the file
             const blob = new Blob([agentCode], {
               type: "application/javascript",
@@ -299,12 +410,13 @@
             console.error("Error generating agent:", await response.text());
           }
         });
-        // Run the thread
-        document
+      // Run the thread
+      document
         .getElementById("runThread")
         .addEventListener("click", async () => {
           alert(`focus : ${focus}`);
-          const system_message = document.getElementById("preview-system").value;
+          const system_message =
+            document.getElementById("preview-system").value;
           const user_prompt = document.getElementById("preview-prompt").value;
           const response = await fetch("/run_thread", {
             method: "POST",
@@ -316,10 +428,11 @@
 
           const result = await response.json();
           alert(`GPT response: ${result.message}`);
-          document.getElementById("preview-response").innerText = result.message;
+          document.getElementById("preview-response").innerText =
+            result.message;
           alert(result.message);
         });
-        document
+      document
         .getElementById("newThread")
         .addEventListener("click", async () => {
           const response = await fetch("/create_thread", {
@@ -335,5 +448,7 @@
           alert(result.message);
         });
     </script>
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
